Se agregó un párrafo para probar GIT

--- a/demo-frontend-basico/index.html
+++ b/demo-frontend-basico/index.html
@@ -14,6 +14,7 @@
     <h5 style="background-color: hsl(240, 0%, 50%);">Esto es un encabezado h5</h5>
     <h6>Esto es un encabezado h6</h6>
 
+    <p>Parrafo para probar GIT</p>
     <p style="font-size: 1.5rem;"><b>Esto es un párrafo</b></p>
     <p style="font-weight: bold;">Este es otro párrafo <del>Texto ELIMINADO</del> <sub>Text SUB</sub> <sup>Texto SUP</sup> </p>
     <p>El objetivo es: <q>Esto es una cita</q></p>
