Finalizando frontend básico (html5, css3, js)

--- a/demo-frontend-basico/index.html
+++ b/demo-frontend-basico/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo SIS257 Básico</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <style>
         
     </style>
@@ -18,16 +18,16 @@
     <h5 style="background-color: hsl(240, 0%, 50%);">Esto es un encabezado h5</h5>
     <h6>Esto es un encabezado h6</h6>
 
-    <p class="parrafo">Parrafo para probar GIT</p>
+    <p id="pSaludo" class="parrafo">Parrafo para probar GIT</p>
     <p class="parrafo"><b>Esto es un párrafo</b></p>
-    <p style="font-weight: bold;">Este es otro párrafo <del>Texto ELIMINADO</del> <sub>Text SUB</sub> <sup>Texto SUP</sup> </p>
+    <p id="pOtro">Este es otro párrafo <del>Texto ELIMINADO</del> <sub>Text SUB</sub> <sup>Texto SUP</sup> </p>
     <p>El objetivo es: <q>Esto es una cita</q></p>
     <blockquote cite="https://usfx.bo">El Centro de Competencia OH TARGET - USFX, es una estrategia para promover el enfoque “Una Salud” (One Health) dentro...</blockquote>
     <p>La <abbr title="Universidad de San Francisco Xavier">USFX</abbr> fue fundada en 1624.</p>
     <!-- <address>Calle Junin N° 164</address> -->
     <!-- <p><cite>HTML 5</cite> por XX</p> -->
     <a href="https://usfx.bo" target="_black">Este es el enlace al sitio web de la USFX</a>
-    <img class="centrarImg" src="./images/logo_linux.png" alt="Logo Linux" width="120">
+    <img id="miImg" class="centrarImg" src="./images/Linux-Logotipo-2008.jpg" alt="Logo Linux" width="120">
     <br>
     <button>Clic Aquí</button>
     <ol>
@@ -35,7 +35,7 @@
         <li>Fundamentos de la Progrmación</li>
         <li>Redes II</li>
     </ol>
-    <script src="./scripts.js"></script>
+    <script src="./js/main.js"></script>
     <script>
         // Esto es un comentario que no imprime en pantalla
         /*
